--- a/.gitignore
+++ b/.gitignore
@@ -6022,3 +6022,4 @@ node_modules/yauzl/index.js
 node_modules/yauzl/LICENSE
 node_modules/yauzl/package.json
 node_modules/yauzl/README.md
+CookieBlock-Consent-Classifier
