--- a/.gitignore
+++ b/.gitignore
@@ -6023,3 +6023,4 @@ node_modules/yauzl/LICENSE
 node_modules/yauzl/package.json
 node_modules/yauzl/README.md
 CookieBlock-Consent-Classifier
+CookieBlock-Consent-Classifier
